[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/sky.png" type="Texture" id=1]
[ext_resource path="res://CatSelect.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Stand/Stand.png" type="Texture" id=3]
[ext_resource path="res://Cat.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/RedeemGold/RedeemGold.ttf" type="DynamicFontData" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "Stand.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="CatSelect" type="Node2D"]
script = ExtResource( 2 )
Cat = ExtResource( 4 )

[node name="sky" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 131073, 0, 0, 131077, 0, 0, 131088, 0, 0, 131092, 0, 0, 196609, 0, 0, 196613, 0, 0, 196624, 0, 0, 196628, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 327681, 0, 0, 327685, 0, 0, 327696, 0, 0, 327700, 0, 0, 393217, 0, 0, 393221, 0, 0, 393232, 0, 0, 393236, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 524289, 0, 0, 524293, 0, 0, 524304, 0, 0, 524308, 0, 0, 589825, 0, 0, 589829, 0, 0, 589840, 0, 0, 589844, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 720897, 0, 0, 720901, 0, 0, 720912, 0, 0, 720916, 0, 0, 786433, 0, 0, 786437, 0, 0, 786448, 0, 0, 786452, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0 )

[node name="LinkButton1" type="LinkButton" parent="."]
margin_left = 224.0
margin_top = 64.0
margin_right = 332.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 3 )
text = "Tebi"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="."]
margin_left = 224.0
margin_top = 160.0
margin_right = 332.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 3 )
text = "Huge"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton3" type="LinkButton" parent="."]
margin_left = 224.0
margin_top = 256.0
margin_right = 332.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 3 )
text = "Sam"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton4" type="LinkButton" parent="."]
margin_left = 224.0
margin_top = 352.0
margin_right = 332.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 3 )
text = "Cairo"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton5" type="LinkButton" parent="."]
margin_left = 704.0
margin_top = 64.0
margin_right = 812.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 3 )
text = "Jeremy"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton6" type="LinkButton" parent="."]
margin_left = 704.0
margin_top = 160.0
margin_right = 812.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 3 )
text = "Meringue"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton7" type="LinkButton" parent="."]
margin_left = 704.0
margin_top = 256.0
margin_right = 812.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 3 )
text = "Baron"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton8" type="LinkButton" parent="."]
margin_left = 704.0
margin_top = 352.0
margin_right = 812.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 3 )
text = "Train"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="LinkButton" parent="."]
margin_left = 450.0
margin_top = 516.0
margin_right = 574.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 3 )
text = "Back"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 113.393, 90.7143 )
[connection signal="pressed" from="LinkButton1" to="." method="_on_LinkButton1_pressed"]
[connection signal="pressed" from="LinkButton2" to="." method="_on_LinkButton2_pressed"]
[connection signal="pressed" from="LinkButton3" to="." method="_on_LinkButton3_pressed"]
[connection signal="pressed" from="LinkButton4" to="." method="_on_LinkButton4_pressed"]
[connection signal="pressed" from="LinkButton5" to="." method="_on_LinkButton5_pressed"]
[connection signal="pressed" from="LinkButton6" to="." method="_on_LinkButton6_pressed"]
[connection signal="pressed" from="LinkButton7" to="." method="_on_LinkButton7_pressed"]
[connection signal="pressed" from="LinkButton8" to="." method="_on_LinkButton8_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
